Claims Management App/mdapipkg/mdapipkg/unpackaged/unpackaged/objects/Policy_Coverage__c.object
<CustomObject>
    <description>Contains coverage-level information on a policy, such as limits and reserves.</description>
    <fields>
        <fullName>Coverage_Type__c</fullName>
        <label>Coverage Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Loss of Use</fullName>
                </value>
                <value>
                    <fullName>Medical Payments to Others</fullName>
                </value>
                <value>
                    <fullName>Personal Liability</fullName>
                </value>
                <value>
                    <fullName>Personal Property</fullName>
                </value>
                <value>
                    <fullName>Personal Property Replacement Cost</fullName>
                </value>
                <value>
                    <fullName>Scheduled Personal Property</fullName>
                </value>
                <value>
                    <fullName>Special Computer Coverage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Limit__c</fullName>
        <label>Limit</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Policy_Number__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Policy Number</label>
        <referenceTo>Policy__c</referenceTo>
        <relationshipLabel>Policy Coverages</relationshipLabel>
        <relationshipName>Policy_Coverages</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reserve__c</fullName>
        <label>Reserve</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Policy Coverage</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Policy Coverage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Policy Coverages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>